fix margin under nav on mobile page load

--- a/wp-content/themes/makeblog/less/make/home.less
+++ b/wp-content/themes/makeblog/less/make/home.less
@@ -93,10 +93,10 @@
 	}
 }
 
-
-
 #home-featured {
-
+  @media screen and (max-width: 767px) {  
+    margin-top: 55px;
+  }
   .hf-article {
     position: relative;
     display: inline-block;
